--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,5 +49,16 @@
         </div>
       </div>
     </footer>
+    <!-- Sticky nav scroll effect -->
+    <script>
+      window.addEventListener('scroll', function() {
+        const header = document.querySelector('.site-header');
+        if (window.scrollY > 50) {
+          header.classList.add('scrolled');
+        } else {
+          header.classList.remove('scrolled');
+        }
+      });
+    </script>
   </body>
 </html>
